@@ -4,6 +4,10 @@ Changelog
 3.0 (unreleased)
 ----------------
 
+- Make DateTime a new-style class and limit its available attributes via a
+  slots definition. The pickle size increases to 110 bytes thanks to the
+  `ccopy_reg\n_reconstructor` stanza. But the memory size drops from 3kb to
+  500 bytes for each instance.
 
 3.0a1 (2011-05-06)
 ------------------
